--- a/rogue_tattoo/app/views/layouts/_navigation.html.erb
+++ b/rogue_tattoo/app/views/layouts/_navigation.html.erb
@@ -14,6 +14,13 @@
       <ul class="nav navbar-nav">
         <%= render 'layouts/navigation_links' %>
       </ul>
+      
+      <ul class="nav navbar-nav navbar-right">
+      	<%if admin_signed_in? %>
+      		<%= link_to 'LogOut', destroy_admin_session_path, method: :delete %>
+      	<% else %>
+      		<%= link_to 'LogIn', new_admin_session_path%>
+      	<% end %>
     </div>
   </div>
 </nav>
