--- a/rogue_tattoo/app/views/layouts/application.html.erb
+++ b/rogue_tattoo/app/views/layouts/application.html.erb
@@ -14,7 +14,11 @@
     </header>
     <main role="main">
        <%= render 'layouts/messages' %>
+       <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
+
        <%= yield %>
+       
     </main>
   </body>
 </html>
