Logo on index page

--- a/rogue_tattoo/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/rogue_tattoo/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -34,8 +34,8 @@ img {
 // to make views framework-neutral
 main {
   @extend .container;
-  background-color: #eee;
-  padding-bottom: 80px;
+  background-color: #000000;
+  //padding-bottom: 80px;
   width: 100%;
   margin-top: 51px; // accommodate the navbar
   }
