Testing layouts for index

--- a/rogue_tattoo/app/views/home/index.html.erb
+++ b/rogue_tattoo/app/views/home/index.html.erb
@@ -1,3 +1,43 @@
-<h1>Rogue Tattoo</h1>
-<p>Find me in app/views/home/index.html.erb</p>
-<%= image_tag "logo.jpg" %>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="row">
+                <div class="col-md-6">
+                    <%= image_tag "logo.jpg" %>
+                </div>
+                <div class="col-md-6">
+                    <%= image_tag "logo.jpg" %>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <%= image_tag "logo.jpg" %>
+                </div>
+                <div class="col-md-6">
+                    <%= image_tag "logo.jpg" %>
+                </div>                
+            </div>
+        </div>
+        <div class="col-md-4">
+            <%= image_tag "logo.jpg" %>
+        </div>
+        <div class="col-md-4">
+            <div class="row">
+                <div class="col-md-6">
+                    <%= image_tag "logo.jpg" %>
+                </div>
+                <div class="col-md-6">
+                    <%= image_tag "logo.jpg" %>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <%= image_tag "logo.jpg" %>
+                </div>
+                <div class="col-md-6">
+                    <%= image_tag "logo.jpg" %>
+                </div>                
+            </div>
+        </div>
+    </div>
+</div>
