--- a/rogue_tattoo/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/rogue_tattoo/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -1,6 +1,12 @@
 // import the CSS framework
 @import "bootstrap";
 
+body
+{
+    background-color: #000000;
+    color: white;
+}
+
 // make all images responsive by default
 img {
   @extend .img-responsive;
@@ -43,3 +49,20 @@ section {
   @extend .row;
   margin-top: 20px;
   }
+
+.logo
+{
+    height: 75px;
+    width: 100px;
+}
+
+.img-thumbnailz
+{
+    height: 100px;
+    width: 100px;
+}
+
+.margin-remove
+{
+    padding: 0 15px;
+}
