--- a/rogue_tattoo/app/views/artist/new.html.erb
+++ b/rogue_tattoo/app/views/artist/new.html.erb
@@ -2,7 +2,7 @@ Add new artist
 <div class='row'>
     <div class='col-md-6'>
         
-        <%= form_for @artist, url: artist_index_path do |a| %>
+        <%= form_for @artist, url: artist_index_path, :html => { :multipart => true } do |a| %>
         <div class="form-group">
             <label>Name</label>
             <%= a.text_field :name, class: 'form-control' %>
