--- a/rogue_tattoo/app/views/home/dashboard.html.erb
+++ b/rogue_tattoo/app/views/home/dashboard.html.erb
@@ -12,7 +12,7 @@ Dashboard
             <% @artists.each do |artist| %>
             <tr>
                 <td><%= image_tag artist.avatar.url(:thumb) %></td>
-                <td>artist.name</td>
+                <td><%= artist.name %></td>
                 <td><%= link_to "Edit", edit_artist_path(artist) %></td>
                 <td><%= link_to "Delete", artist_path(artist), method: :delete %></td>
             </tr>
