--- a/rogue_tattoo/app/views/home/dashboard.html.erb
+++ b/rogue_tattoo/app/views/home/dashboard.html.erb
@@ -1,7 +1,22 @@
-Dashboard
+<div class="row">
+    <h1 class="text-center">Rogue Tattoo Dashboard</h1>
+    <hr>
+</div>
 <div class="row">
     <div class="col-md-6">
-        <table>
+        <panel class="panel panel-default">
+            <h3 class="text-center">Client Administration</h3>
+            
+            <div class="text-center">
+                <%= link_to "Add new Client", new_client_path %>
+            </div>
+        </panel>
+    </div>
+    
+    <div class="col-md-6">
+        <panel class="panel panel-default">
+        <h3 class="text-center">Tattoo Artist Administration</h3>
+        <table class="table table-striped">
             <tr>
                 <th></th>
                 <th>Artist Name</th>
@@ -18,10 +33,11 @@ Dashboard
             </tr>
             <% end %>
         </table>
-        <%= link_to "Add new Tattoo Artist", new_artist_path %>
+        <div class="text-center">
+            <%= link_to "Add new Tattoo Artist", new_artist_path %>
+        </div>
+        </panel>
     </div>
     
-    <div class="col-md-6">
-        col 2
-    </div>
+
 </div>
