--- a/rogue_tattoo/app/views/layouts/_navigation_links.html.erb
+++ b/rogue_tattoo/app/views/layouts/_navigation_links.html.erb
@@ -1,1 +1,11 @@
 <%# add navigation links to this file %>
+<li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Artists <b class="caret"></b></a>
+        <ul class="dropdown-menu navbar-inverse menu-color-white">
+        <% @art = Artist.all %>
+        <% @art.each do |artist| %>
+          <li class="menu-color-white"><%= link_to artist.name, artist_path(artist) %></li>
+        <% end %>
+        
+        </ul>
+</li>
