--- a/rogue_tattoo/app/views/home/dashboard.html.erb
+++ b/rogue_tattoo/app/views/home/dashboard.html.erb
@@ -16,7 +16,7 @@
     <div class="col-md-6">
         <panel class="panel panel-default">
         <h3 class="text-center">Tattoo Artist Administration</h3>
-        <table class="table table-striped">
+        <table class="table table-striped table-border">
             <tr>
                 <th></th>
                 <th>Artist Name</th>
