--- a/app/views/client/edit.html.erb
+++ b/app/views/client/edit.html.erb
@@ -1,2 +1,34 @@
-<h1>Client#edit</h1>
-<p>Find me in app/views/client/edit.html.erb</p>
+<div class="row">
+    <h1 class="text-center">Rogue Tattoo Dashboard</h1>
+    <hr>
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <panel class="panel panel-default">
+            <h3 class="text-center">Client Stories</h3>
+            <table class="table table-striped table-border">
+                <tr>
+                    <th>Story Title</th>
+                    <th>Story Description</th>
+                </tr>
+                
+                <% @stories.each do |story| %>
+                <tr>
+                    <td><%= story.title %></td>
+                    <td><%= story.description %></td>
+
+                </tr>
+                <% end %>
+            </table>
+
+        </panel>
+    </div>
+    
+    <div class="col-md-6">
+        <panel class="panel panel-default">
+
+        </panel>
+    </div>
+    
+
+</div>
