--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -17,8 +17,8 @@
                 <% @clients.each do |client| %>
                 <tr>
                     <td><%= client.name %></td>
-                    <td><%= link_to "Edit", edit_client_path(client) %></td>
-                    <td>Add new tattoo story</td>
+                    <td><%= link_to "View & Edit", edit_client_path(client) %></td>
+                    <td><%= link_to "Add new tattoo story", new_story_path(:c_id => client.id) %></td>
                     <td><%= link_to "Delete", client_path(client), method: :delete %></td>
                 </tr>
                 <% end %>
