--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 visible-md visible-lg">
             <div class="row">
                 <div class="col-md-6">
                     <%= image_tag "logo.jpg" %>
@@ -21,7 +21,7 @@
         <div class="col-md-4">
             <%= image_tag "logo.jpg" %>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 visible-md visibile-lg">
             <div class="row">
                 <div class="col-md-6">
                     <%= image_tag "logo.jpg" %>
