--- a/app/views/client/edit.html.erb
+++ b/app/views/client/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-    <h1 class="text-center">Rogue Tattoo Dashboard</h1>
+    <h1 class="text-center"><%= client.name %></h1>
     <hr>
 </div>
 <div class="row">
