Fixes for Add Story.  Removed AWS gem.

--- a/app/views/story/new.html.erb
+++ b/app/views/story/new.html.erb
@@ -19,6 +19,10 @@
             <label>Choose Image</label>
             <%= s.file_field :img %>
         </div>
+        <div class="form-group uneditable">
+        		<%= s.text_field :client_id , value: @client.id %>
+        </div>
+        	
         <div class='form-group'>
             <%= s.submit %>
         </div>
