More story updates

--- a/app/views/client/edit.html.erb
+++ b/app/views/client/edit.html.erb
@@ -10,13 +10,15 @@
                 <tr>
                     <th>Story Title</th>
                     <th>Story Description</th>
+                    <th>Tattoo Artist</th>
                 </tr>
                 
                 <% @stories.each do |story| %>
                 <tr>
                     <td><%= story.title %></td>
                     <td><%= story.description %></td>
-
+                    <% @artist = Artist.find(story.artist_id)%>
+                    <td><%= @artist.name %></td>
                 </tr>
                 <% end %>
             </table>
