--- a/app/views/story/new.html.erb
+++ b/app/views/story/new.html.erb
@@ -15,12 +15,22 @@
             <%= s.text_area :description, class: 'form-control' %>
         </div>
         
+        <div class="form-group">
+        	<label>Tattoo Artist</label>
+        	<select class="form-control">
+        		<% @artists.each do |artist| %>
+        			<option><%= artist.name %></option>
+        		<% end %>
+        	</select>
+        </div>>
+        	
+        	
         <div class='form-group'>
             <label>Choose Image</label>
             <%= s.file_field :img %>
         </div>
         <div class="form-group uneditable">
-        		<%= s.text_field :client_id , value: @client.id %>
+        		<%= s.text_field :client_id , value: @client.id, class: 'hidden' %>
         </div>
         	
         <div class='form-group'>
