--- a/app/views/story/new.html.erb
+++ b/app/views/story/new.html.erb
@@ -17,16 +17,17 @@
         
         <div class="form-group">
         	<label>Tattoo Artist</label>
-        	<%= s.select(:artist_id), class: 'form-control' %>
-        		<%= options_from_collection_for_select(Artist.all, :id, :name) %>   			
-        	<% end %>
-        </div>>
+        	<%= collection_select(:story, :artist_id, Artist.all, :id, :name) %>
+        	<% # s.select(:artist_id) %>
+        	<%= options_from_collection_for_select(Artist.all, :id, :name) %>   			
+        </div>
         	
         	
         <div class='form-group'>
             <label>Choose Image</label>
             <%= s.file_field :img %>
         </div>
+        
         <div class="form-group uneditable">
         		<%= s.text_field :client_id , value: @client.id, class: 'hidden' %>
         </div>
