--- a/app/views/client/edit.html.erb
+++ b/app/views/client/edit.html.erb
@@ -15,7 +15,7 @@
                 
                 <% @stories.each do |story| %>
                 <tr>
-                    <td><%= story.title %></td>
+                    <td><%= link_to story.title, edit_story_path(story) %></td>
                     <td><%= story.description %></td>
                     <% @artist = Artist.find(story.artist_id)%>
                     <td><%= @artist.name %></td>
