--- a/app/views/story/new.html.erb
+++ b/app/views/story/new.html.erb
@@ -25,13 +25,20 @@
         	
         <div class='form-group'>
             <label>Choose Image</label>
-            <%= s.file_field :img %>
+            <% #s.file_field :img %>
         </div>
         
         <div class="form-group uneditable">
         		<%= s.text_field :client_id , value: @client.id, class: 'hidden' %>
         </div>
         	
+        <div id="dynamicInput" class='form-group'>
+            <label>Choose Image</label>
+            <input id='story_img' name='story[img][]' type='file' />
+        </div>
+        
+        <input type="button" value="Add More Images" onClick="addInput('dynamicInput');">
+     
         <div class='form-group'>
             <%= s.submit %>
         </div>
