Changes to model association

--- a/app/views/story/edit.html.erb
+++ b/app/views/story/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Story#edit</h1>
+<div class="row text-center">
+	<h1>Edit <%= @story.title %></h1>
+	</div>
 
-                
+            
     <% @images.each do |image| %>
         <%= image_tag image.img.url(:medium) %>
     <% end %>
