--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,6 +17,7 @@
       <ul class="nav navbar-nav navbar-right">
       	<%if admin_signed_in? %>
       		<%= link_to 'LogOut', destroy_admin_session_path, method: :delete %>
+      		<%= link_to 'Dashboard', dashboard_path %>
       	<% else %>
       		<%= link_to 'LogIn', new_admin_session_path%>
       	<% end %>
