--- a/app/views/client/new.html.erb
+++ b/app/views/client/new.html.erb
@@ -4,10 +4,15 @@ Add new client
         
         <%= form_for @client, url: client_index_path, :html => { :multipart => true } do |a| %>
         <div class="form-group">
-            <label>Name</label>
-            <%= a.text_field :name, class: 'form-control' %>
+            <label>First Name</label>
+            <%= a.text_field :firstname, class: 'form-control' %>
         </div>
-
+        
+        <div class="form-group">
+            <label>Last Name</label>
+            <%= a.text_field :lastname, class: 'form-control' %>
+        </div>
+        
         <div class='form-group'>
             <%= a.submit %>
         </div>
