--- a/app/views/story/edit.html.erb
+++ b/app/views/story/edit.html.erb
@@ -30,10 +30,13 @@
         <tr>
         <%= s.fields_for :images do |i| %>
                 <td class="text-center">
+                    <%= i.text_field :story_id %>
+                    <%= i.check_box :display %>
                     <%=link_to image_tag(i.object.img.url(:thumb)), i.object.img.url(:medium), :popup=>['original_image', 'height=300,width=300'], class: 'img-thumbnail' %><br>
                     <%= check_box_tag 'delete_id[]', i.object.id %> Delete
                     <%#link_to "Delete", image_path(i.object), method: :delete %><br>
-                    <%= check_box_tag(:display) %> Display
+                    <%= check_box 'i', 'display', {}, 'true', 'false' %> disp2
+                    <%= check_box_tag 'image[display][]', i.object.display %> Display
                 </td>
         <% end %>       
         </tr>
