--- a/app/views/story/new.html.erb
+++ b/app/views/story/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-    <h1 class="text-center">Add new tattoo story for <%= @client.name %></h1>
+    <h1 class="text-center">Add new tattoo story for <%= @client.firstname %> <%= @client.lastname %></h1>
 </div>
 
 <div class="row">
@@ -21,24 +21,23 @@
         	<% # s.select(:artist_id) %>
         	<%= options_from_collection_for_select(Artist.all, :id, :name) %>   			
         </div>
-        	
-        	
-        <div class='form-group'>
-            <label>Choose Image</label>
-            <% #s.file_field :img %>
-        </div>
         
         <div class="form-group uneditable">
         		<%= s.text_field :client_id , value: @client.id, class: 'hidden' %>
         </div>
         	
+
         <div id="dynamicInput" class='form-group'>
             <label>Choose Image</label>
             <input id='story_img' name='story[img][]' type='file' />
+            
+            <%= check_box_tag 'story[img_display][]' %> Display on homepage?
+        </div>
+
+        <div class="form-group">
+            <input type="button" value="Add More Images" onClick="addInput('dynamicInput');">
         </div>
         
-        <input type="button" value="Add More Images" onClick="addInput('dynamicInput');">
-     
         <div class='form-group'>
             <%= s.submit %>
         </div>
