--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
         <div class="col-md-4 visible-md visible-lg">
             <div class="row">
                 <div class="col-md-6">
-                    <%= image_tag "logo.jpg" %>
+                    <%= image_tag @url[0] %>
                 </div>
                 <div class="col-md-6">
                     <%= image_tag "logo.jpg" %>
