--- a/app/views/story/edit.html.erb
+++ b/app/views/story/edit.html.erb
@@ -20,6 +20,10 @@
         	<% options_from_collection_for_select(Artist.all, :id, :name) %>   			
         </div>
         	
+        <div class="form-group">
+            <label>Featured Story</label>
+            <%= s.check_box :featured %>
+        </div>
      
         <div class="form-group">
         <table class="text-center table-bordered">
