--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -4,12 +4,17 @@
 .body-main
 {
     background-color: #000000;
+    background-image:url("admin_bg.jpg");
+    background-size: 100% 100%;
+    background-repeat:no-repeat;
+    background-position: center center;
+    background-attachment:fixed;
     color: white;
 }
 
 .homeimage
 {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 200px;
     margin: 0;
 }
