--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
 <%# navigation styled for Bootstrap 3.0 %>
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-color">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to 'Home', root_path, class: 'navbar-brand' %>
+      <%= link_to 'Rogue Tattoo', root_path, class: 'navbar-brand' %>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
@@ -18,8 +18,6 @@
       	<%if admin_signed_in? %>
       		<%= link_to 'LogOut', destroy_admin_session_path, method: :delete %>
       		<%= link_to 'Dashboard', dashboard_path %>
-      	<% else %>
-      		<%= link_to 'LogIn', new_admin_session_path%>
       	<% end %>
       </ul>
     </div>
