--- a/app/views/newspost/edit.html.erb
+++ b/app/views/newspost/edit.html.erb
@@ -15,12 +15,12 @@ Edit news
         
         <div class="form-group">
             <label>Start Date</label>
-            <%= a.date_field :start, class: 'form-control' %>
+            <%= a.date_field :start_date, class: 'form-control' %>
         </div>
         
         <div class="form-group">
             <label>End Date</label>
-            <%= a.date_field :end, class: 'form-control' %>
+            <%= a.date_field :end_date, class: 'form-control' %>
         </div>
         
         <div class='form-group'>
