--- a/app/views/newspost/new.html.erb
+++ b/app/views/newspost/new.html.erb
@@ -15,12 +15,12 @@ Add new news
         
         <div class="form-group">
             <label>Start Date</label>
-            <%= a.date_field :start, value: Date.today, class: 'form-control' %>
+            <%= a.date_field :start_date, value: Date.today, class: 'form-control' %>
         </div>
         
         <div class="form-group">
             <label>End Date</label>
-            <%= a.date_field :end, value: (Date.today + 30), class: 'form-control' %>
+            <%= a.date_field :end_date, value: (Date.today + 30), class: 'form-control' %>
         </div>
         
         <div class='form-group'>
