--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -2,6 +2,21 @@
     <h1 class="text-center">Rogue Tattoo Dashboard</h1>
     <hr>
 </div>
+
+<div class="row">
+  <div class="col-md-4">
+  		<div class="panel">
+  			<%= link_to "News Admin", news_path, :remote => true %>
+  		</div>
+  		<% @artists.each do |artist| %>
+  		<%= link_to artist.name, edit_artist_path(artist), :remote => true %>
+  </div>
+ 		
+ 		<div class="col-md-8">
+ 			<div id="content">
+ 		</div>
+</div>
+
 <div class="row">
     <div class="col-md-6">
         <panel class="panel panel-default">
