--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -5,95 +5,29 @@
 
 <div class="row">
   <div class="col-md-4">
-  		<div class="panel">
-  			<%= link_to "News Admin", newspost_index_path, :remote => true %>
-  		</div>
+  		<div class="panel panel-primary">
+  			<div class="panel-heading">News</div>
+  			<ul class="nav nav-stacked nav-pills">
+  			    <li><%= link_to "Add New News", new_newspost_path, :remote => true, :class => "alert-info" %></li>
+                <% @newsposts.each do |news| %>
+                <li><%= link_to news.heading, edit_newspost_path(news), :remote => true %></li>
+                <% end %>
+  			</ul>
+
+  		
+  		<div class="panel-heading">Artists</div>
+  		<ul class="nav nav-stacked nav-pills">
+  		  	<li><%= link_to "Add New Artist", new_artist_path, :class => "alert-info", :remote => true %></li>
   		    <% @artists.each do |artist| %>
-  		    <%= link_to artist.name, edit_artist_path(artist), :remote => true %>
+  		    <li><%= link_to artist.name, edit_artist_path(artist), :remote => true %></li>
   		    <% end %>
+
+  		</ul>
+  		
+  		</div>
   </div>
  		
  		<div class="col-md-8">
  			<div id="content">
  		</div>
-</div>
-
-<div class="row">
-    <div class="col-md-6">
-        <panel class="panel panel-default">
-            <h3 class="text-center">Client Administration</h3>
-            <table class="table table-striped table-border">
-                <tr>
-                    <th>Client Name</th>
-                    <th>Edit</th>
-                    <th>Add New Tattoo</th>
-                    <th>Delete</th>
-                </tr>
-                
-                <% @clients.each do |client| %>
-                <tr>
-                    <td><%= client.lastname %>, <%= client.firstname %></td>
-                    <td><%= link_to "View & Edit", edit_client_path(client) %></td>
-                    <td><%= link_to "Add new tattoo story", new_story_path(:c_id => client.id) %></td>
-                    <td><%= link_to "Delete", client_path(client), method: :delete %></td>
-                </tr>
-                <% end %>
-            </table>
-            <div class="text-center">
-                <%= link_to "Add new Client", new_client_path %>
-            </div>
-        </panel>
-    </div>
-    
-    <div class="col-md-6">
-        <panel class="panel panel-default">
-        <h3 class="text-center">Tattoo Artist Administration</h3>
-        <table class="table table-striped table-border">
-            <tr>
-                <th></th>
-                <th>Artist Name</th>
-                <th>Edit</th>
-                <th>Delete</th>
-            </tr>
-            
-            <% @artists.each do |artist| %>
-            <tr>
-                <td><%= image_tag artist.avatar.url(:thumb) %></td>
-                <td><%= artist.name %></td>
-                <td><%= link_to "Edit", edit_artist_path(artist) %></td>
-                <td><%= link_to "Delete", artist_path(artist), method: :delete %></td>
-            </tr>
-            <% end %>
-        </table>
-        <div class="text-center">
-            <%= link_to "Add new Tattoo Artist", new_artist_path %>
-        </div>
-        </panel>
-        
-        <panel class="panel panel-default">
-            <h3 class="text-center">Homepage News</h3>
-            <table class="table table-striped table-border">
-                <tr>
-                    <th>Heading</th>
-                    <th>Start Date</th>
-                    <th>End Date</th>
-                    <th>Remove</th>
-                </tr>
-                
-                <% @newsposts.each do |news| %>
-                <tr>
-                    <td><%= link_to news.heading, edit_newspost_path(news) %></td>
-                    <td><%= news.start_date.to_date %></td>
-                    <td><%= news.end_date.to_date %></td>
-                    <td><%= link_to "Remove", newspost_path(news), method: :delete %></td>
-                </tr>
-                <% end %>
-            </table>
-            <div class="text-center">
-                <%= link_to "Add News", new_newspost_path %>
-            </div>
-        </panel>
-    </div>
-    
-    
 </div>
