--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -40,3 +40,14 @@
     height: auto;
     width: 100px;
 }
+
+.table-home
+{
+  margin-left:auto;
+  margin-right:auto;
+}
+
+.home-logo
+{
+  width: 200px;
+}
