Update image url.  Hide images on phone / tablets

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,14 @@
 <body class="body-main">
 <div class="container">
-	<div class="col-md-2">
+	<div class="col-md-2 hidden-xs hidden-sm">
 		<%= image_tag @url[0] %>
         Created by: <%= @art[0] %>
         
-        		<%= image_tag @url[0] %>
-        Created by: <%= @art[0] %>
+        		<%= image_tag @url[2] %>
+        Created by: <%= @art[2] %>
         
-        		<%= image_tag @url[0] %>
-        Created by: <%= @art[0] %>
+        		<%= image_tag @url[4] %>
+        Created by: <%= @art[4] %>
 	</div>
 	
 	<div class="col-md-8">
@@ -39,15 +39,15 @@
             <% end %>
 	</div>
 	
-	<div class="col-md-2">
-		<%= image_tag @url[0] %>
-        Created by: <%= @art[0] %>
+	<div class="col-md-2 hidden-xs hidden-sm">
+		<%= image_tag @url[1] %>
+        Created by: <%= @art[1] %>
         
-        		<%= image_tag @url[0] %>
-        Created by: <%= @art[0] %>
+        		<%= image_tag @url[3] %>
+        Created by: <%= @art[3] %>
         
-        		<%= image_tag @url[0] %>
-        Created by: <%= @art[0] %>
+        		<%= image_tag @url[5] %>
+        Created by: <%= @art[5] %>
 	</div>
     
 </div>
