--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,8 +25,8 @@
             	<%= image_tag "logo.jpg", class: "home-logo"%>
             </td>
             <td>
-            	Facebook<br />
-            	Instagram
+            	<%= link_to "Facebook", "http://www.facebook.com/roguetattoos" %><br />
+            	<%= link_to "Instagram", "http://www.instagram.com/ludlowtattoo" %>
             </td>
             </table>
                         <h1 class="text-center">Rogue Tattoo News and Specials</h1>
