--- a/app/assets/stylesheets/artist.css.scss
+++ b/app/assets/stylesheets/artist.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the artist controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+div#show-images
+{
+  width: 900px;
+  background-color: black; //#fff;
+  margin: 0 auto;
+  text-align: left;
+  border-color: #ddd;
+  border-style: none solid solid;
+  border-width: 0; //medium 1px 1px;
+}
