--- a/app/views/newspost/_edit_content.html.erb
+++ b/app/views/newspost/_edit_content.html.erb
@@ -27,8 +27,10 @@ Edit news
             <%= a.submit %>
         </div>
         <% end %>
-    
         
+<br />
+
+        <%= link_to "Delete this post", newspost_path(@newspost), method: :delete %>
     </div>
     
     <div class='col-md-6'>
