--- a/app/views/artist/_edit_content.html.erb
+++ b/app/views/artist/_edit_content.html.erb
@@ -48,16 +48,16 @@
 
         <div id="dynamicInput" class='form-group'>
             <label>Add additional Images</label>
-            <input id='artist_img' name='artist[img][]' type='file' />
+            <input id='artist_img' name='artist[new_img][]' type='file' />
         </div>
         
         <div id="dynamicInput" class='form-group'>
             <label>Add additional Images</label>
-            <input id='artist_img' name='artist[img][]' type='file' />
+            <input id='artist_img' name='artist[new_img][]' type='file' />
         </div>
         <div id="dynamicInput" class='form-group'>
             <label>Add additional Images</label>
-            <input id='artist_img' name='artist[img][]' type='file' />
+            <input id='artist_img' name='artist[new_img][]' type='file' />
         </div>
         
         <!--<input type="button" value="Add More Images" onClick="addInput('dynamicInput');">-->
