--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -28,11 +28,14 @@
     right:auto;
     
 }
-.panel-home
+.home-logo-panel
 {
-    background-color:rgba(0,0,0,0.5);
+    background-color:rgba(0,0,0,1);
     height: auto;
-    max-height:75%;
+    //max-height:75%;
+    //width: 350px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .nav-image
@@ -49,5 +52,5 @@
 
 .home-logo
 {
-  width: 200px;
+  width: 300px;
 }
