--- a/app/views/artist/show.html.erb
+++ b/app/views/artist/show.html.erb
@@ -1,4 +1,5 @@
 <body class="body-main">
+<%= render '/layouts/navigation' %>
 <div class = "row">
     <div class="col-md-4">
         <%= image_tag(@artist.avatar.url(:medium)) %>        
