--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,35 +1,15 @@
 <body class="body-main">
-<div class="container">
-	<div class="col-md-2 hidden-xs hidden-sm">
-		<%= image_tag @url[0] %>
-        Created by: <%= @art[0] %>
-        
-        		<%= image_tag @url[2] %>
-        Created by: <%= @art[2] %>
-        
-        		<%= image_tag @url[4] %>
-        Created by: <%= @art[4] %>
+	<div class="col-md-1 hidden-xs hidden-sm">
+        <%= link_to "Facebook", "http://www.facebook.com/roguetattoos" %><br />
+        <%= link_to "Instagram", "http://www.instagram.com/ludlowtattoo" %>
 	</div>
 	
-	<div class="col-md-8">
-		            <%= image_tag "tattoo_header.jpg", class: "homeimage" %>
-            <table class="table-home">
-   				<td>
-            <address>
-            1050 Crater Lake Ave<br>
-            Medford, Oregon<br>
-            (541)622-8119
-            </address>
-            </td>
-            <td>
-            	<%= image_tag "logo.jpg", class: "home-logo"%>
-            </td>
-            <td>
-            	<%= link_to "Facebook", "http://www.facebook.com/roguetattoos" %><br />
-            	<%= link_to "Instagram", "http://www.instagram.com/ludlowtattoo" %>
-            </td>
-            </table>
-                        <h1 class="text-center">Rogue Tattoo News and Specials</h1>
+	<div class="col-md-10">
+        <div class="panel home-logo-panel">
+            <%= image_tag "header.jpg" %>
+        </div>
+		<%= render '/layouts/navigation' %>           
+            <h1 class="text-center">Rogue Tattoo News and Specials</h1>
     
             <% @news.each do |n| %>
             <div>
@@ -39,16 +19,6 @@
             <% end %>
 	</div>
 	
-	<div class="col-md-2 hidden-xs hidden-sm">
-		<%= image_tag @url[1] %>
-        Created by: <%= @art[1] %>
-        
-        		<%= image_tag @url[3] %>
-        Created by: <%= @art[3] %>
-        
-        		<%= image_tag @url[5] %>
-        Created by: <%= @art[5] %>
+	<div class="col-md-1 hidden-xs hidden-sm">
 	</div>
-    
-</div>
 </body>
