--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,11 +1,14 @@
 <%# add navigation links to this file %>
-<li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Artists <b class="caret"></b></a>
-        <ul class="dropdown-menu navbar-inverse menu-color-white">
-        <% @art = Artist.all %>
-        <% @art.each do |artist| %>
-          <li class="menu-color-white"><%= link_to artist.name, artist_path(artist) %></li>
-        <% end %>
-        
+<li class="navbar-center-item"><%= link_to 'Rogue Tattoo', root_path, class: 'navbar-text-color' %></li>
+<li class="dropdown navbar-center-item">
+        <a href="#" class="dropdown-toggle navbar-text-color" data-toggle="dropdown">Artists <b class="caret"></b></a>
+        <ul class="dropdown-menu drop-menu-item navbar-color">
+        	<% @art = Artist.all %>
+        	<% @art.each do |artist| %>
+          	<li class="navbar-text-color drop-menu-item"><%= link_to artist.name, artist_path(artist) %></li>
+        	<% end %>
         </ul>
 </li>
+<li class="navbar-center-item">Permanent Makeup</li>
+<li class="navbar-center-item"><%= link_to "About Us", about_path, class: 'navbar-text-color' %></li>
+<li class="navbar-center-item"><%= link_to "Appointments", appointments_path, class: 'navbar-text-color' %></li>
