--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text.css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Rogue Tattoo" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Rogue Tattoo" %>">
@@ -10,8 +11,8 @@
   </head>
   <body>
     <header>
-        <%= render 'layouts/navigation' %>
     </header>
+    
     <main role="main">
        <%= render 'layouts/messages' %>
 
