--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -50,7 +50,10 @@
   margin-right:auto;
 }
 
-.home-logo
+.carousel-size
 {
-  width: 300px;
+    width: 600px;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
