Fix image code on homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -44,7 +44,7 @@
                         </div>
                 </div>
 
-                <%= @images.each do |img| %>
+                <% @images.each do |img| %>
                 <div class="item">
                     <%- image_tag img.img.url %>
                         <div class="carousel-caption">
