Fix image code on homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,7 +46,7 @@
 
                 <% @images.each do |img| %>
                 <div class="item">
-                    <%- image_tag img.img.url %>
+                    <%= image_tag img.img.url %>
                         <div class="carousel-caption">
                             img.artist.name
                         </div>
