Adding artist name to images

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -48,7 +48,7 @@
                 <div class="item">
                     <%= image_tag img.img.url %>
                         <div class="carousel-caption">
-                            img.artist.name
+                            <%= img.artist.name %>
                         </div>
                 </div>
                 <% end %> 
