--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -52,8 +52,8 @@
 
 .carousel-size
 {
-    width: 600px;
-    height: auto;
+    width: 500px;
+    height: 500px;
     margin-left: auto;
     margin-right: auto;
 }
