--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -9,6 +9,13 @@
         	<% end %>
         </ul>
 </li>
-<li class="navbar-center-item">Permanent Makeup</li>
+<li class="dropdown navbar-center-item">
+        <a href="#" class="dropdown-toggle navbar-text-color" data-toggle="dropdown">Permanent Makeup<b class="caret"></b></a>
+        <ul class="dropdown-menu drop-menu-item navbar-color">
+        	<% @makeupart = Makeupartist.all %>
+        	<% @makeupart.each do |artist| %>
+          	<li class="navbar-text-color drop-menu-item"><%= link_to artist.name, artist_path(artist) %></li>
+        	<% end %>
+        </ul>
+</li>
 <li class="navbar-center-item"><%= link_to "About Us", about_path, class: 'navbar-text-color' %></li>
-<li class="navbar-center-item"><%= link_to "Appointments", appointments_path, class: 'navbar-text-color' %></li>
