--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -18,4 +18,6 @@
         	<% end %>
         </ul>
 </li>
-<li class="navbar-center-item"><%= link_to "About Us", about_path, class: 'navbar-text-color' %></li>
+<li class="navbar-center-item"><%= link_to "About Us", about_path, class: 'navbar-text-color' %></li>        
+<li class="navbar-center-item"><%= link_to "Facebook", "http://www.facebook.com/roguetattoos", class: 'navbar-text-color' %></li>
+<li class='navbar-center-item'><%= link_to "Instagram", "http://www.instagram.com/ludlowtattoo", class: 'navbar-text-color' %></li>
