--- a/app/views/makeupartist/_new_content.html.erb
+++ b/app/views/makeupartist/_new_content.html.erb
@@ -1,8 +1,8 @@
-Add new artist
+Add new Makeup Artist
 <div class='row'>
     <div class='col-md-6'>
         
-        <%= form_for @artist, url: artist_index_path, :html => { :multipart => true } do |a| %>
+        <%= form_for @m_artist, url: makeupartist_index_path, :html => { :multipart => true } do |a| %>
         <div class="form-group">
             <label>Name</label>
             <%= a.text_field :name, class: 'form-control' %>
